fixing borders and fontsize on mobile width

--- a/src/app/setup/setup.component.css
+++ b/src/app/setup/setup.component.css
@@ -23,10 +23,10 @@ div#divCentral {
 }
 
 p#p1 {
-  margin-right: 2.7%;
+  margin-right: 4.7%;
 }
 button#b1 {
-  margin-right: 17%;
+  margin-right: 18%;
   padding: 0.3rem;
 }
 
@@ -190,17 +190,16 @@ button#bMobile {
   }
 
   h1 {
-    font-size: 2em;
+    font-size: 40px;
     font-weight: bold;
     background: -webkit-linear-gradient(left, #6654c8 0%, #54c86b 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    margin-right: 6.5rem;
+    margin: 0 0 20px;
   }
   p#p1 {
-    margin-right: 6.5rem;
     line-height: 1.6rem;
-    font-size: 0.8rem;
+    font-size: 1em;
     margin-bottom: 0px;
   }
   strong {
@@ -245,3 +244,5 @@ button#bMobile {
     background-color: #08070b;
   }
 }
+
+
